fixed some formatting and fixed the paid with cash message and the customer notes not showing up.

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -19,10 +19,42 @@
 // @import "../../../node_modules/@fortawesome/fontawesome-free/less/fontawesome";
 //@import "./../../../vendor/laravel/spark/resources/assets/less/spark";
 
+article {
+  padding: .75rem;
+  text-indent: 1.5rem;
+  text-align: justify;
+}
+
+.btn-active {
+  background-color: blue;
+  color: white;
+}
+
+.btn-inactive {
+  background-color: white;
+  color: blue;
+  border: thin blue solid;
+}
+
+.btn-normal {
+  background-color: white;
+  color: blue;
+  border: thin blue solid;
+}
+
+.btn-normal:active {
+  background-color: blue;
+  color: white;
+}
+
 .border-bottom-thick-black {
   border-bottom: thin grey solid;
   padding-top: .5rem;
   margin-bottom: .5rem;
+}
+
+.f-bold {
+  font-weight: bold;
 }
 
 .m-center {
@@ -48,6 +80,10 @@
 
 .mt-half-rem {
   margin-top: .5rem;
+}
+
+.mt-1rem {
+  margin-top: 1rem;
 }
 
 .mb-half-rem-negative {
